[fix] - fix scrolling performace & article jump

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -79,6 +79,7 @@
     &-contain {
       height: 100%;
       overflow: auto;
+      -webkit-overflow-scrolling: touch;
     }
   }
   &_active {
